--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>home</title>
+	<title>Home Page</title>
 	<link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
