--- a/home.html
+++ b/home.html
@@ -6,14 +6,13 @@
 </head>
 <body>
 	<div id="maindiv">
-		<div class="heading">
-			<h2 id="name">
+		<div class="heading" id="heading">
+			<h2 style="color: black; float: left;" id="name">
 			</h2>
+
 			<input type="text" value="" onkeyup="searchMovie(this.value)" name="search" id="search" placeholder="search">
 		</div>
-
 		<div id="listdiv">
-			
 		</div>
 	</div>
 	<script type="text/javascript">
